fix transparency on ios safari

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -25,10 +25,11 @@
         height: 100%;
         scroll-behavior: smooth;
         overflow: hidden;
+        background-color: transparent;
     }
 
     body {
-        background-color: var(--color-off-white);
+        background-color: transparent;
         font-family: var(--font-mono);
         color: var(--color-blue);
         margin: 0;
@@ -61,6 +62,7 @@
     scroll-snap-align: start;
     scroll-snap-stop: always;
     scroll-margin-top: 0;
+    background-color: var(--color-off-white);
 
     /* Height: Use lvh to go behind mobile bars and vh for laptops */
     width: 100%;
